Add add don't work

--- a/finalProject/src/main/resources/templates/drugs/drugs-list.html
+++ b/finalProject/src/main/resources/templates/drugs/drugs-list.html
@@ -45,7 +45,7 @@
         <div class="col-12">
             <div class="card mt-2">
                 <div class="card-header">
-                    <a type="button" class="btn btn-primary" th:href="@{/manufacturer/add-manufacturer.html}">Home</a>
+                    <a type="button" class="btn btn-primary" th:href="@{/drugs/new}">Add</a>
                 </div>
             </div>
         </div>
